[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/scripts/menu/linkdosoutrosjogos.gd" type="Script" id=1]
[ext_resource path="res://sprites/Botao dourado.png" type="Texture" id=2]
[ext_resource path="res://sprites/botão voltar.png" type="Texture" id=3]
[ext_resource path="res://sprites/trophy-menu.png" type="Texture" id=4]
[ext_resource path="res://Fonte/Lato-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 305.0, -23.0, 150.0, 75.0, 200.0, 98.0, 224.0, 175.0, 279.0, 329.0, 52.0, 351.0, 413.0, 440.0, 461.0, 484.0 ],
"_edit_vertical_guides_": [ 129.0, 228.0, 100.0, 253.0 ]
}

[node name="Wallpapermenuprincipal" type="Sprite" parent="."]
position = Vector2( 86.4762, 90.9599 )
scale = Vector2( 0.997222, 1.03437 )
texture = ExtResource( 4 )
offset = Vector2( 94.2857, 210.794 )

[node name="As aventuras de fibrinha" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 99.0
margin_right = 291.0
margin_bottom = 167.0
rect_scale = Vector2( 0.795956, 0.759637 )
texture_normal = ExtResource( 2 )

[node name="Mr Vtal" type="TextureButton" parent="."]
margin_left = 101.0
margin_top = 224.0
margin_right = 293.0
margin_bottom = 292.0
rect_scale = Vector2( 0.792822, 0.817277 )
texture_normal = ExtResource( 2 )

[node name="Vitálicios" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 355.0
margin_right = 291.0
margin_bottom = 423.0
rect_scale = Vector2( 0.797321, 0.778287 )
texture_normal = ExtResource( 2 )

[node name="Moralética" type="TextureButton" parent="."]
margin_left = 101.0
margin_top = 485.0
margin_right = 293.0
margin_bottom = 553.0
rect_scale = Vector2( 0.800225, 0.764916 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 123.0
margin_top = 102.0
margin_right = 228.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 1 )
text = "As aventuras de fibrinha"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
margin_left = 143.0
margin_top = 239.0
margin_right = 209.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 2 )
text = "Mr V.tal "

[node name="Label3" type="Label" parent="."]
margin_left = 140.0
margin_top = 371.0
margin_right = 213.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 3 )
text = "Vitálicios"

[node name="Label4" type="Label" parent="."]
margin_left = 135.0
margin_top = 500.0
margin_right = 220.0
margin_bottom = 521.0
custom_fonts/font = SubResource( 4 )
text = "Moralética"

[node name="voltar" type="TextureButton" parent="."]
margin_left = 26.0
margin_top = 573.0
margin_right = 218.0
margin_bottom = 765.0
rect_scale = Vector2( 0.215, 0.223 )
texture_normal = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="As aventuras de fibrinha" to="." method="_on_As_aventuras_de_fibrinha_pressed"]
[connection signal="pressed" from="Mr Vtal" to="." method="_on_Mr_Vtal_pressed"]
[connection signal="pressed" from="Vitálicios" to="." method="_on_Vitlicios_pressed"]
[connection signal="pressed" from="Moralética" to="." method="_on_Moraltica_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
